# mne-plsc

./: .coverage  .readthedocs.yml  README.md  coverage.xml  pyproject.toml
.github/workflows/: tests-old.yml  tests.yml
docs/source/: MCPLSC.rst  Template.rst  conf.py  examples.rst  fit_beh.rst  fit_mc.rst  index.rst  input-format.md  requirements.txt
docs/source/classes/: PLSC.rst  classes.rst
docs/source/fitting/: fit_beh.rst  fit_within_beh.rst  fitting.rst
docs/source/notebooks/: Untitled.ipynb  beh-erp.ipynb  freq-src.ipynb  freq-src_old.ipynb  marginal-brain-scores.ipynb  mc-erf.ipynb  mc-erp.ipynb  mc-spec.ipynb  mc-surf-stc.ipynb  mc-tfr.ipynb  mc-vol-stc.ipynb  mc-vs-ems.ipynb  multi-subject-analysis.ipynb  plot-clusts-sensor.ipynb  plot-sensor-clusters.ipynb  plot-surface-clusters.ipynb  within-participants.ipynb
docs/source/utils/: average_epochs_by_label.rst  average_epochs_by_metadata.rst  get_epoch_labels.rst  utils.rst
src/mne_plsc/: __init__.py  compute.py  utils.py  viz.py
tests/: .coverage  coverage.xml  test_compute.py  test_epo.py  test_epochs.py  test_errors.py  test_io.py  test_mcpls.py  test_spec.py  test_spectrum.py  test_stc.py  test_surf_stc.py  test_tfr.py  test_vol-stc.py  test_vol_stc.py  test_vol_stc_freq.py  test_vol_stc_timefreq.py  test_within_beh.py
