
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mne-plsc"
dependencies = ["mne", "pyplsc", "numpy", "pandas", "matplotlib", "nibabel", "nilearn"]
version = "0.0.12"
description = "PLSC for MNE"
authors = [{ name="Isaac Kinley", email="isaac.kinley@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "--cov=pyplsc --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["pyplsc"]
omit = ["tests/*"]